Changes to be committed: 	modified:   src/main/java/com/apex/campu_quest_v2/Config/SecurityConfig.java 	modified:   src/main/java/com/apex/campu_quest_v2/Controllers/AdminController.java 	modified:   src/main/java/com/apex/campu_quest_v2/Controllers/AuthenticationController.java 	new file:   src/main/java/com/apex/campu_quest_v2/Controllers/StaffController.java 	new file:   src/main/java/com/apex/campu_quest_v2/Controllers/TaskController.java 	modified:   src/main/java/com/apex/campu_quest_v2/Controllers/UserController.java 	new file:   src/main/java/com/apex/campu_quest_v2/Dto/TaskSubmissionDto.java 	modified:   src/main/java/com/apex/campu_quest_v2/Entities/Classe.java 	new file:   src/main/java/com/apex/campu_quest_v2/Entities/StudentTask.java 	modified:   src/main/java/com/apex/campu_quest_v2/Entities/Task.java 	modified:   src/main/java/com/apex/campu_quest_v2/Entities/User.java 	modified:   src/main/java/com/apex/campu_quest_v2/Enums/Permission.java 	modified:   src/main/java/com/apex/campu_quest_v2/Enums/Role.java 	modified:   src/main/java/com/apex/campu_quest_v2/Enums/TaskStatus.java 	modified:   src/main/java/com/apex/campu_quest_v2/Enums/TaskType.java 	new file:   src/main/java/com/apex/campu_quest_v2/Repositories/StudentTaskRepository.java 	new file:   src/main/java/com/apex/campu_quest_v2/Repositories/TaskRepository.java 	modified:   src/main/java/com/apex/campu_quest_v2/Responses/LoginResponse.java 	modified:   src/main/java/com/apex/campu_quest_v2/Services/AuthenticationService.java 	new file:   src/main/java/com/apex/campu_quest_v2/Services/TaskService.java